rotenc_library_created

--- a/Proj_atmega128_4/Atmega128/Debug/Makefile
+++ b/Proj_atmega128_4/Atmega128/Debug/Makefile
@@ -45,6 +45,7 @@ C_SRCS +=  \
 ../Libraria/keypad.c \
 ../Libraria/lcd.c \
 ../Libraria/lfsm.c \
+../Libraria/rotenc.c \
 ../main.c
 
 
@@ -62,6 +63,7 @@ Libraria/function.o \
 Libraria/keypad.o \
 Libraria/lcd.o \
 Libraria/lfsm.o \
+Libraria/rotenc.o \
 main.o
 
 OBJS_AS_ARGS +=  \
@@ -72,6 +74,7 @@ Libraria/function.o \
 Libraria/keypad.o \
 Libraria/lcd.o \
 Libraria/lfsm.o \
+Libraria/rotenc.o \
 main.o
 
 C_DEPS +=  \
@@ -82,6 +85,7 @@ Libraria/function.d \
 Libraria/keypad.d \
 Libraria/lcd.d \
 Libraria/lfsm.d \
+Libraria/rotenc.d \
 main.d
 
 C_DEPS_AS_ARGS +=  \
@@ -92,6 +96,7 @@ Libraria/function.d \
 Libraria/keypad.d \
 Libraria/lcd.d \
 Libraria/lfsm.d \
+Libraria/rotenc.d \
 main.d
 
 OUTPUT_FILE_PATH +=Atmega128.elf
@@ -151,6 +156,13 @@ Libraria/lcd.o: ../Libraria/lcd.c
 	
 
 Libraria/lfsm.o: ../Libraria/lfsm.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include" -I"../Libraria"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega128 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega128" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Libraria/rotenc.o: ../Libraria/rotenc.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include" -I"../Libraria"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega128 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega128" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
