--- a/Proj_atmega128_6/Atmega128/Debug/Makefile
+++ b/Proj_atmega128_6/Atmega128/Debug/Makefile
@@ -52,8 +52,8 @@ C_SRCS +=  \
 ../Libraria/keypad.c \
 ../Libraria/lcd.c \
 ../Libraria/lfsm.c \
+../Libraria/pcf8563rtc.c \
 ../Libraria/rotenc.c \
-../Libraria/rtc.c \
 ../main.c
 
 
@@ -78,8 +78,8 @@ Libraria/i2c.o \
 Libraria/keypad.o \
 Libraria/lcd.o \
 Libraria/lfsm.o \
+Libraria/pcf8563rtc.o \
 Libraria/rotenc.o \
-Libraria/rtc.o \
 main.o
 
 OBJS_AS_ARGS +=  \
@@ -97,8 +97,8 @@ Libraria/i2c.o \
 Libraria/keypad.o \
 Libraria/lcd.o \
 Libraria/lfsm.o \
+Libraria/pcf8563rtc.o \
 Libraria/rotenc.o \
-Libraria/rtc.o \
 main.o
 
 C_DEPS +=  \
@@ -116,8 +116,8 @@ Libraria/i2c.d \
 Libraria/keypad.d \
 Libraria/lcd.d \
 Libraria/lfsm.d \
+Libraria/pcf8563rtc.d \
 Libraria/rotenc.d \
-Libraria/rtc.d \
 main.d
 
 C_DEPS_AS_ARGS +=  \
@@ -135,8 +135,8 @@ Libraria/i2c.d \
 Libraria/keypad.d \
 Libraria/lcd.d \
 Libraria/lfsm.d \
+Libraria/pcf8563rtc.d \
 Libraria/rotenc.d \
-Libraria/rtc.d \
 main.d
 
 OUTPUT_FILE_PATH +=Atmega128.elf
@@ -251,14 +251,14 @@ Libraria/lfsm.o: ../Libraria/lfsm.c
 	@echo Finished building: $<
 	
 
-Libraria/rotenc.o: ../Libraria/rotenc.c
+Libraria/pcf8563rtc.o: ../Libraria/pcf8563rtc.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include" -I"../Libraria"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega128 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega128" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
-Libraria/rtc.o: ../Libraria/rtc.c
+Libraria/rotenc.o: ../Libraria/rotenc.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include" -I"../Libraria"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega128 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega128" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
